# network-protocol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  chain-spec.json  dev.compose.yml  docker-compose.yml  localnet.compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  docker.yml  release.yml
infra/: Makefile  README.md
infra/ansible/roles/xerberus_node_client/defaults/main/: main.yml
infra/ansible/roles/xerberus_node_client/tasks/: main.yml
infra/ansible/scripts/: 00-install-ansible.sh
infra/scripts/: rsync.sh  setup_gcp.sh  ssh.sh
infra/terraform/: compute.tf  fullnodes.tf  iap.tf  lightnodes.tf  load-balancer.tf  locals.tf  network.tf  outputs.tf
model_runtime/: Cargo.toml
model_runtime/src/: main.rs
model_runtime/src/datasource/: duckdb.rs  mod.rs
model_runtime/src/datastore/: duckdb.rs  mod.rs
model_runtime/src/models/: emissions.rs  ledger.rs  mod.rs  network.rs
model_runtime/src/storage/: duckdb.rs  mod.rs
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/risk-ratings/: Cargo.toml
pallets/risk-ratings-old/: Cargo.toml  README.md
pallets/risk-ratings-old/src/: lib.rs
pallets/risk-ratings-old2/: Cargo.toml
pallets/risk-ratings-old2/src/: lib.rs
pallets/risk-ratings/src/: lib.rs  weights.rs
pallets/rr-feed/: Cargo.toml
pallets/rr-feed/src/: default_weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build.sh  dev.compose.yml  full-node.compose.yml  interact.sh  join-testnet.compose.yml  join-testnet.sh  localnet.compose.yml  publish.sh  run.sh  stop.sh  subkey.sh  telemetry-web-build.sh  up.sh  xerberus-node.sh
telemetry/: README.md  docker-compose.yml
telemetry-web/: .gitignore  Makefile
telemetry-web/infra/terraform/: compute.tf  load-balancer.tf  locals.tf
telemetry-web/src/: App.tsx  Connection.ts  state.ts  utils.ts
telemetry-web/src/components/: Footer.tsx
telemetry/backend/common/src/: rolling_total.rs
telemetry/backend/telemetry_core/src/: main.rs
telemetry/backend/telemetry_core/src/aggregator/: inner_loop.rs
telemetry/backend/telemetry_core/src/state/: chain.rs  chain_stats.rs
telemetry/backend/telemetry_core/tests/: e2e_tests.rs
telemetry/backend/test_utils/src/server/: server.rs
telemetry/backend/test_utils/src/workspace/: start_server.rs
telemetry/common/src/: assign_id.rs  dense_map.rs  http_utils.rs  multi_map_unique.rs
telemetry/frontend/src/: Connection.ts  utils.ts
telemetry/frontend/src/components/Chain/: Header.tsx
telemetry/telemetry_core/src/: find_location.rs
telemetry/telemetry_core/src/state/: counter.rs  state.rs
telemetry/telemetry_core/tests/: soak_tests.rs
telemetry/telemetry_shard/src/: main.rs  real_ip.rs
webapp/src/: RiskRatings.js
webapp/src/config/: development.json
