[workspace.package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
repository = "https://github.com/substrate-developer-hub/substrate-xerberus-net/"
license = "MIT-0"
homepage = "https://substrate.io"

[workspace]
members = [
	"node",
	# "pallets/template",
	"pallets/risk-ratings",
	# "pallets/rr-feed",
	"runtime",
	"model_runtime",
]
resolver = "2"
[profile.release]
panic = "unwind"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
if-same-then-else = { level = "allow", priority = 2 }
zero-prefixed-literal = { level = "allow", priority = 2 }
type_complexity = { level = "allow", priority = 2 }
nonminimal-bool = { level = "allow", priority = 2 }
borrowed-box = { level = "allow", priority = 2 }
too-many-arguments = { level = "allow", priority = 2 }
needless-lifetimes = { level = "allow", priority = 2 }
unnecessary_cast = { level = "allow", priority = 2 }
identity-op = { level = "allow", priority = 2 }
useless_conversion = { level = "allow", priority = 2 }
unit_arg = { level = "allow", priority = 2 }
option-map-unit-fn = { level = "allow", priority = 2 }
bind_instead_of_map = { level = "allow", priority = 2 }
erasing_op = { level = "allow", priority = 2 }
eq_op = { level = "allow", priority = 2 }
while_immutable_condition = { level = "allow", priority = 2 }
needless_option_as_deref = { level = "allow", priority = 2 }
derivable_impls = { level = "allow", priority = 2 }
stable_sort_primitive = { level = "allow", priority = 2 }
extra-unused-type-parameters = { level = "allow", priority = 2 }
default_constructed_unit_structs = { level = "allow", priority = 2 }
