[package]
name = "model_runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0.86"
arrow = "52.1.0"
async-trait = "0.1.81"
chrono = "0.4.38"
datafusion = "40.0.0"
duckdb = { version = "1.0.0", features = ["bundled"] }
parquet = "52.1.0"
polars = { version = "0.41.3", features = ["lazy"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.38.0", features = ["full"] }


[lints]
workspace = true
